# pkg/docs/swagger.json
@@ -9,6 +9,40 @@
     "host": "localhost:8081",
     "basePath": "/",
     "paths": {
+        "/PlayeName": {
+            "post": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "PlayeName user",
+                "operationId": "Controller_PlayeName",
+                "parameters": [
+                    {
+                        "description": "Auth input data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/api.PlayeNameInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.PlayeNameResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.PlayeNameResponseErr"
+                        }
+                    }
+                }
+            }
+        },
         "/Player": {
             "post": {
                 "produces": [
@@ -252,7 +286,13 @@
         "api.AuthenticateInput": {
             "type": "object",
             "properties": {
-                "sessionUID": {
+                "currency": {
+                    "type": "string"
+                },
+                "language": {
+                    "type": "string"
+                },
+                "token": {
                     "type": "string"
                 }
             }
@@ -260,6 +300,9 @@
         "api.AuthenticateResponse": {
             "type": "object",
             "properties": {
+                "AuthSessionID": {
+                    "type": "string"
+                },
                 "currency": {
                     "type": "string"
                 },
@@ -268,9 +311,6 @@
                 },
                 "error": {
                     "type": "integer"
-                },
-                "userID": {
-                    "type": "string"
                 },
                 "wallet": {
                     "type": "string"
@@ -280,6 +320,9 @@
         "api.AuthenticateResponseErr": {
             "type": "object",
             "properties": {
+                "AuthSessionID": {
+                    "type": "string"
+                },
                 "currency": {
                     "type": "string"
                 },
@@ -288,9 +331,6 @@
                 },
                 "error": {
                     "type": "integer"
-                },
-                "userID": {
-                    "type": "string"
                 },
                 "wallet": {
                     "type": "string"
@@ -311,6 +351,9 @@
                 },
                 "numOfAutobet": {
                     "type": "integer"
+                },
+                "playerToken": {
+                    "type": "string"
                 },
                 "sessionUID": {
                     "type": "string"
@@ -348,6 +391,9 @@
         "api.GameUpdateInput": {
             "type": "object",
             "properties": {
+                "playerToken": {
+                    "type": "string"
+                },
                 "sessionUID": {
                     "type": "string"
                 }
@@ -485,6 +531,9 @@
                 "numOfAutobet": {
                     "type": "integer"
                 },
+                "playerToken": {
+                    "type": "string"
+                },
                 "sessionUID": {
                     "type": "string"
                 },
@@ -530,6 +579,9 @@
                 "multiplBashout": {
                     "type": "string"
                 },
+                "playerToken": {
+                    "type": "string"
+                },
                 "sessionUID": {
                     "type": "string"
                 }
@@ -563,6 +615,51 @@
                 }
             }
         },
+        "api.PlayeNameInput": {
+            "type": "object",
+            "properties": {
+                "currency": {
+                    "type": "string"
+                },
+                "isHidden": {
+                    "type": "boolean"
+                },
+                "playerName": {
+                    "type": "string"
+                },
+                "sessionUID": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.PlayeNameResponse": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "error": {
+                    "type": "integer"
+                },
+                "playerToken": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.PlayeNameResponseErr": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "error": {
+                    "type": "integer"
+                },
+                "playerToken": {
+                    "type": "string"
+                }
+            }
+        },
         "api.PlayerItem": {
             "type": "object",
             "properties": {
@@ -581,10 +678,13 @@
                 "isCashedout": {
                     "type": "boolean"
                 },
-                "time": {
+                "playername": {
                     "type": "string"
                 },
-                "username": {
+                "playertoken": {
+                    "type": "string"
+                },
+                "time": {
                     "type": "string"
                 }
             }
